# fair-mast

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  cat.yaml  compare_cpfs.py  config.yml  consolidate.job  cpf_data.html  create_cpf.sql  create_db.sql  create_tables.sql  data_creation_for_test.py  data_examples.html  db_query_example.ipynb  definitions.md  definitions.txt  dev_requirements.txt  docker-compose-dev.yml  docker-compose.yml  docs-requirements.txt  efit_data.html  genindex.html  graphql_api.html  index.html  index_level1.yml  intake_1.yaml  level1.yml  load_data.html  load_zarr.py  load_zarr_custom.py  load_zarr_vdim.py  map_signals.ipynb  mast2HDF5.py  mast_db.sql  output_test.py  pyproject.toml  (+14 more)
.github/workflows/: TestWF.yml  cd.yml  ci.yml
_sources/: cpf_data.ipynb  thomson_scattering.ipynb
campaign_shots/: M5.csv  M6.csv  M7.csv  M8.csv  M9.csv  README.md  mast_u.csv  mini_campaign.csv  tiny_campaign.csv
data/: meta.yml
data/index/: mast-level1-signals.parquet  mast-level1-sources.parquet  mast-level2-signals.parquet  mast-level2-sources.parquet  mast_cpf_columns.parquet  mast_cpf_data.parquet  mastu-level2-signals.parquet  mastu-level2-sources.parquet  shots.parquet
dev/docker/: .env.dev  Dockerfile  README.md  api.Dockerfile  bootstrap_nginx.sh  config.yaml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  env.example  mast-api.Dockerfile  nginx-initial.conf  nginx-test.conf  nginx.conf  nginx_auto_reload.sh  postgres.Dockerfile  prometheus.yml
dev/jobs/: README.md  consolidate.job  create_signal_dataset_metadata.job  create_signal_metadata.job  start_cluster.job  submit_collect_metadata.sh
docs/: .gitignore  README.md  _config.yml  _toc.yml  bulk_download.ipynb  config.yml  cpf_data.ipynb  data_archive.ipynb  data_examples.ipynb  db_config.yml  definitions.md  demo.ipynb  efit_data.ipynb  environment.yml  geometry_plotting.ipynb  graphql_api.ipynb  index.md  level1-data.ipynb  level2-data.ipynb  load_data.ipynb  load_index.ipynb  load_spark.ipynb  quickstart.ipynb  rest_api.ipynb  statistics.ipynb
docs/default/: index.html
docs/default_docs/: explorer.html  index.html
drupal/: README.md
etc/nginx/: nginx.conf
experiments/: plot_results.ipynb  read_formats.py  write_formats.py
experiments/basic_reading_experiments/: load_zarr.py  results_without_cache.csv
experiments/reading/: load_zarr_custom.py  plot_results.ipynb  read_formats.py  results.csv  results_with_cache.csv
experiments/speed_test/: 30110_log_client.txt  30110_log_server.txt  30111_log_server.txt  speed_test.ipynb
jobs/: compact_zarr.job  freia_create_metadata.qsub  freia_get_summary.qsub  freia_images.job  freia_prov.job  freia_write_cpf.qsub  freia_write_dataset.qsub  freia_write_datasets.qsub  freia_write_summary.qsub  submit.sh
mappings/: custom_units.txt  dim_names.json  dimensions.json  globals.json  signals.json  units.json
notebooks/: benchmark.ipynb  data-structure-report.ipynb  load_test.ipynb  sample_hdf.ipynb  signal_summary.ipynb
output_test/: conftest.py  output_test.py
parameters/: xsx_camera_l.csv  xsx_camera_t.csv  xsx_camera_u.csv
scripts/: README.md  create_campaign_shot_lists.py  create_metadata.py  make_cpf_table.py  to_netcdf.py  to_netcdf2.py
sql/: create_cpf.sql  create_tables.sql
src/: compact_zarr.py  create_catalog.py  create_provenance.py  create_sample_metadata.py  create_signal_metadata.py  create_sources.py  db_utils.py  ingest.py  parse_cpf.py  source.py  uda.py
src/api/: create.py  crud.py  database.py  environment.py  (+9 more)
test/: test_hdf_source.py  test_sources.py
tests/: conftest.py  pytest.ini  requirements.txt  test_archive.py  test_ci.py  test_graphql.py  test_json.py  test_mock_db.py
(+316 files in other folders)
